# MediaGrab

./: .env_example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
api/: app.py
api/admin/: auth.py  views.py
api/handlers/: auth.py  authorized.py  cache.py  dependencies.py  download.py  help.py  history.py  information.py  root.py  vk.py  youtube.py
api/schemas/: auth.py  download_schema.py  response_schema.py  youtube.py
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: auth.py  download.py  help.py  history.py  information.py
app/api/v1/endpoints/admin/: auth.py  views.py
app/api/v2/: routes.py
app/core/: celery_config.py  config.py  database.py  dependencies.py  exceptions.py  security.py
app/core/security/: admin_security.py  user_security.py
app/infrastructure/: download_infra.py  information_infra.py  sponsorblock_infra.py
app/infrastructure/admin/: user_admin.py  videos_admin.py
app/model/: users.py  videos.py
app/repository/: base_repository.py  user_repository.py  video_repository.py
app/schema/: auth_schema.py  help_schema.py  history_schema.py  information_schema.py  user_schema.py
app/services/: auth_service.py  download_service.py  help_service.py  history_service.py  information_service.py
app/tasks/: download_tasks.py
app/utils/: auth_patterns.py  url_patterns.py
common/: exceptions.py  regex.py  settings.py
database/: database.py  repository.py
database/users/: auth.py  models.py  repository.py
database/videos/: models.py  repository.py
docker_compose/: app.yaml  storages.yaml
docker_compose/conf.d/: app.conf  nginx.conf
docker_compose/conf.d/prod/: nginx.conf
migrations/: env.py
migrations/versions/: 3aaac178e5f9_fixed_tables.py  45e67d2ed6de_fixed_tables.py  4c2254f86a4b_add_column_is_admin_for_user.py  607a267fb39b_initial.py  8415d561dce2_initial_migration.py  8b76ddc5babf_fixed_tables.py  b9599c3a62eb_username_not_unique.py  dac8e11f98c0_fixed_tables_relationships.py  ffdbeb4eb8e0_fixed_tables.py
services/: download.py  information.py  sponsorblock.py  youtube_download.py
services/tasks/: celery.py  tasks.py
tests/: conftest.py  mock_users.json  mock_videos.json
tests/integration_tests/: test_api_auth.py  test_api_authorized.py  test_api_get_video.py  test_api_information.py
tests/unit_tests/: test_download.py  test_repository.py
