[tool.poetry]
name = "multigrab"
version = "0.1.0"
description = ""
authors = ["Actus Nileh <actusnileh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.1"
django-environ = "^0.11.2"
yt-dlp = "^2024.5.27"
pytube = "^15.0.0"
moviepy = "^1.0.3"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
